# livepeer-naap-analytics

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CANONICAL_RULE_REQUIREMENTS.md  Dockerfile.webapp  Makefile  README.md  api_views_next_steps.md  data-validation-rules.md  docker-compose.scenario.yml  docker-compose.yml
analytics-architecture/: clickhouse-queries.md  clickhouse-schema-design.md  high-level-architecture-v1.md  kafka-stream-samples.json  query-layer-comparisons.md
api/: go.mod  go.sum
deploy/: README.md  docker-setup.sh  kafka-ui.stack.yml  set_ufw_rules.sh  stack.yml  start_portainer_agent.sh  ubuntu-file-modifications.txt  ubuntu-setup.sh
docker/: Dockerfile.webapp  docker-compose-clickhouse.yml  docker-compose-flink.yml  docker-compose-grafana.yml  docker-compose-kafka-connect.yml  docker-compose-kafka.yml  docker-compose-livepeer.yml  docker-compose-minio.yml  docker-compose-traefik.yml
docs/: BACKLOG-029-rollup-inflation-assessment.md  DESIGN.md  PLANS.md  PRODUCT_SENSE.md  README.md  backlog.md  design.md  index.md  metrics-and-sla-reference.md  plans.md  product-sense.md  repository-guide.md  start-here.md
documentation/: ARCHITECTURE.md  DATA_QUALITY.md  FLINK_DEPLOYMENT.md  METRICS_SCHEMA_DESIGN_SCRATCHPAD.md  METRICS_SCHEMA_DESIGN_SCRATCHPATH.md  METRICS_SCHEMA_V1_DESIGN.md  PIPELINE_EXECUTION_SPLIT.md  QUALITY_ALERTS.md  REPLAY_RUNBOOK.md  WORKFLOW_LIFECYCLE_EDGE_SPEC.md  WORKFLOW_SESSION_MODEL.md  kafka_queue_event_catalog.md
flink-jobs/: build.sbt  pom.xml  submit-jobs.sh  submit-replay-job.sh
notebook-env/: README.md
pipeline/: pyproject.toml
pipeline/src/config/: settings.py
pipeline/src/providers/: kafka.py  telemetry.py
pipeline/src/runtime/: consumer.py
pipeline/src/service/: processor.py
pipeline/src/types/: models.py
pipeline/tests/: test_models.py  test_processor.py
scripts/: apply-store-ddl.sh  backfill_legacy_session_attribution_compat.sql  backfill_normalized_from_retained_raw.sql  core-logic-lint.sh  (+29 more)
tools/inspector/: pyproject.toml
tools/inspector/reports/: inspector-20260324-092555.json  inspector-20260324-092650.json  inspector-20260324-092802.json
tools/inspector/src/inspector/: __main__.py  analyzer.py  consumer.py  report.py  request_job_analyzer.py
tools/python/: README.md  pyproject.toml
(+852 files in other folders)
