[project]
name = "livepeer-naap-notebook-env"
version = "0.1.0"
description = "Notebook environment for Livepeer NAAP data-trace and integration validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "clickhouse-connect>=0.9.2",
  "ipywidgets>=8.1.7",
  "jupyterlab>=4.4.7",
  "pandas>=2.3.2",
]

[tool.uv]
package = false
